--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   outline: none;
 }
 body {
-  background-color: #9873fe;
+  background-color: #8b849e;
 }
 .wrapper {
   width: 90%;
@@ -69,7 +69,7 @@ select {
   background-repeat: no-repeat;
   background-position: right 15px top 50%, center;
   background-size: 20px 20px;
-  background-color: #9873fe;
+  background-color: #7950eb;
   color: #ffffff;
 }
 select option {
@@ -79,7 +79,7 @@ select option {
 button {
   font-size: 1em;
   width: 100%;
-  background-color: #9873fe;
+  background-color: #6f44e3;
   padding: 1em 0;
   margin-top: 2em;
   cursor: pointer;
@@ -92,6 +92,6 @@ button {
   text-align: center;
   margin-top: 1em;
   color: #02002c;
-  background-color: #e5dbff;
+  background-color: #c9c4d7;
   padding: 0.8em 0;
 }
