--- a/style.css
+++ b/style.css
@@ -7,18 +7,18 @@
   outline: none;
 }
 body {
-  background-color: #8b849e;
+  background-color: #4d4c4f;
 }
 .wrapper {
   width: 90%;
-  max-width: 25em;
+  max-width: 400px;
   background-color: #ffffff;
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
   top: 50%;
-  padding: 2em;
-  border-radius: 0.8em;
+  padding: 20px;
+  border-radius: 10px;
 }
 .app-details {
   display: flex;
@@ -26,20 +26,20 @@ body {
   flex-direction: column;
 }
 .app-icon {
-  width: 9.37em;
+  width: 94.37px;
 }
 .app-title {
   font-size: 1.6em;
   text-transform: uppercase;
-  margin-bottom: 1em;
+  margin-bottom: 10px;
 }
 label {
   display: block;
-  font-weight: 600;
+  font-weight: 500;
 }
 input#amount {
   font-weight: 400;
-  font-size: 1.2em;
+  font-size: 12px;
   display: block;
   width: 100%;
   border-bottom: 2px solid #02002c;
@@ -59,9 +59,9 @@ input#amount:focus {
 }
 select {
   width: 100%;
-  padding: 0.6em;
-  font-size: 1em;
-  border-radius: 0.2em;
+  padding: 6px;
+  font-size: 10px;
+  border-radius: 2px;
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -77,21 +77,21 @@ select option {
   color: #02002c;
 }
 button {
-  font-size: 1em;
+  font-size: 10px;
   width: 100%;
   background-color: #6f44e3;
-  padding: 1em 0;
-  margin-top: 2em;
+  padding: 10px 0;
+  margin-top: 20px;
   cursor: pointer;
   border-radius: 0.3em;
   color: #ffffff;
   font-weight: 600;
 }
 #result {
-  font-size: 1.2em;
+  font-size: 12px;
   text-align: center;
-  margin-top: 1em;
+  margin-top: 10px;
   color: #02002c;
   background-color: #c9c4d7;
-  padding: 0.8em 0;
+  padding: 8px 0;
 }
